Update pom.xml
Version from 18.0.0